2011-09-29  David Hyatt  <hyatt@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=69043
        
        [CSS3 Regions] Blocks split across regions with variable width need to size
        differently in each region.
        
        This patch adds the capability for blocks to have variable width and positioning
        when split across regions. It is very rudimentary and so far only operates on basic
        normal flow RenderBlocks. Future patches will expand the support to cover other layout
        constructs like flexible boxes and tables.

        Reviewed by Sam Weinig.

        Added new tests in fast/regions and updated existing results.

        * WebCore.xcodeproj/project.pbxproj:
        * rendering/HitTestResult.cpp:
        (WebCore::HitTestResult::HitTestResult):
        (WebCore::HitTestResult::operator=):
        * rendering/HitTestResult.h:
        (WebCore::HitTestResult::region):
        (WebCore::HitTestResult::setRegion):
        The hit test result now holds the active RenderRegion so that hit testing can adjust
        block widths and positions when hit testing their border boxes.

        * rendering/PaintInfo.h:
        (WebCore::PaintInfo::PaintInfo):
        The paint info struct now holds the active RenderRegion so that painting can adjust
        block widths and positions when painting borders and backgrounds and shadows.

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::layoutBlock):
        If our width ever changes, we invalidate all of our cached RenderBoxRegionInfo in all
        regions that we span.

        (WebCore::RenderBlock::clearRenderBoxRegionInfo):
        Called to clear out our cached region-specific information in all regions that we span.

        (WebCore::RenderBlock::borderBoxRectInRegionAtPosition):
        Returns the borderBoxRect for the region at the specified vertical offset. This rect